--- a/templates/twoxstockfinderapp/history.html
+++ b/templates/twoxstockfinderapp/history.html
@@ -6,52 +6,55 @@
 
 {% block content %}
 
-<div class="container" style="margin-top: 20px;">
-    <table class="table text-center align-middle">
-      <thead class="thead-dark">
-        <tr>
-          <th>ID</th>
-          <th>登録日</th>
-          <th>会社名</th>
-          <th>銘柄コード</th>
-          <th>決算年度</th>
-          <th>2倍予測</th>
-          <th>信頼度</th>
-          <th>BPS</th>
-          <th class="text-end">長期借入金<br>[百万円]</th>
-          <th>配当性向</th>
-          <th class="text-end">売上高<br>[百万円]</th>
-          <th>ROE</th>
-          <th class="text-end">投資CF<br>[百万円]</th>
-          <th>営業CFマージン</th>
-          <th class="text-end">財務CF<br>[百万円]</th>
-          <th></th>
-        </tr>
-      </thead>
+<div class="container mt-5">
+    <table class="table table-striped table-hover text-center align-middle">
+        <thead class="thead-dark">
+            <tr>
+                <th>ID</th>
+                <th>登録日</th>
+                <th>会社名</th>
+                <th>銘柄コード</th>
+                <th>決算年度</th>
+                <th>2倍予測</th>
+                <th>信頼度</th>
+                <th>BPS</th>
+                <th class="text-end">長期借入金<br>[百万円]</th>
+                <th>配当性向</th>
+                <th class="text-end">売上高<br>[百万円]</th>
+                <th>ROE</th>
+                <th class="text-end">投資CF<br>[百万円]</th>
+                <th>営業CFマージン</th>
+                <th class="text-end">財務CF<br>[百万円]</th>
+                <th></th>
+            </tr>
+        </thead>
         <tbody>
-      {% for statement in statements %}
-        <tr>
-          <td>{{statement.id}}</td>
-          <td>{{statement.registered_date}}</td>
-          <td>{{statement.company_name}}</td>
-          <td>{{statement.code}}</td>
-          <td>{{statement.year}}</td>
-          <td>{% if statement.result == 0 %}見込みなし。。{% elif statement.result == 1 %}期待できる！{%  else %}None{% endif %}</td>
-          <td>{{statement.proba|floatformat:2}}</td>
-          <td>{{statement.bps}}</td>
-          <td class="text-end">{{statement.long_term_loans|div:1000000|floatformat:0|intcomma}}</td>
-          <td>{{statement.dividend_payout_ratio}}</td>
-          <td class="text-end">{{statement.revenue|div:1000000|floatformat:0|intcomma}}</td>
-          <td>{{statement.roe}}</td>
-          <td class="text-end">{{statement.investing_cf|div:1000000|floatformat:0|intcomma}}</td>
-          <td>{{statement.operating_cf_margin}}</td>
-          <td class="text-end">{{statement.financing_cf|div:1000000|floatformat:0|intcomma}}</td>
-          <td><form class="delete" method="POST">{% csrf_token %}
-            <button class="btn btn-outline-danger btn-sm" type="submit" name="d_id" value={{statement.id}}>削除</button></form>
-          </tr>
-      {% endfor %}
-      </tbody>
+            {% for statement in statements %}
+            <tr>
+                <td>{{ statement.id }}</td>
+                <td>{{ statement.registered_date }}</td>
+                <td>{{ statement.company_name }}</td>
+                <td>{{ statement.code }}</td>
+                <td>{{ statement.year }}</td>
+                <td>{% if statement.result == 0 %}見込みなし{% elif statement.result == 1 %}期待できる{% else %}None{% endif %}</td>
+                <td>{{ statement.proba|floatformat:2 }}</td>
+                <td>{{ statement.bps }}</td>
+                <td class="text-end">{{ statement.long_term_loans|div:1000000|floatformat:0|intcomma }}</td>
+                <td>{{ statement.dividend_payout_ratio }}</td>
+                <td class="text-end">{{ statement.revenue|div:1000000|floatformat:0|intcomma }}</td>
+                <td>{{ statement.roe }}</td>
+                <td class="text-end">{{ statement.investing_cf|div:1000000|floatformat:0|intcomma }}</td>
+                <td>{{ statement.operating_cf_margin }}</td>
+                <td class="text-end">{{ statement.financing_cf|div:1000000|floatformat:0|intcomma }}</td>
+                <td>
+                    <form class="delete" method="POST">{% csrf_token %}
+                        <button class="btn btn-outline-danger btn-sm" type="submit" name="d_id" value="{{ statement.id }}">削除</button>
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
 </div>
 
-{% endblock%}
+{% endblock %}
