--- a/templates/twoxstockfinderapp/input_form.html
+++ b/templates/twoxstockfinderapp/input_form.html
@@ -1,36 +1,48 @@
 {% extends 'twoxstockfinderapp/base.html' %}
 
 {% block content %}
-<div style="margin-top: 20px;">
-  <h2>情報入力画面</h2>
+<div class="container mt-5">
+    <h2 class="text-center">情報入力画面</h2>
 </div>
-<form method="POST" class="register-form ">{% csrf_token %}
-  <div class="row" style="margin-top:30px;">
-    <div class="range col-lg-6 offset-md-3">
-      {{ form }}
+<form method="POST" class="register-form mt-4">{% csrf_token %}
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            {{ form }}
+        </div>
     </div>
-  </div>
 
-<!-- 送信（保存）ボタン-->
-  <!-- <button type="submit" class="save btn btn-primary offset-md-3" style="margin-top: 30px;">Save</button> -->
-  <button id="submitButton" type="submit" class="save btn btn-primary offset-md-3" style="margin-top: 30px;">
-    <span id="buttonText">Save</span>
-    <span id="loadingSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
-  </button>
+    <!-- 送信（保存）ボタン-->
+    <div class="row justify-content-center mt-3">
+        <div class="col-lg-6 text-center">
+            <button id="submitButton" type="submit" class="btn btn-primary">
+                <span id="buttonText">保存</span>
+                <span id="loadingSpinnerText" class="d-none" role="status" aria-hidden="true">APIの起動に時間がかかっています</span>
+                <span id="loadingSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+            </button>
+        </div>
+    </div>
 </form>
 
 <!-- スクリプト -->
 <script>
-  document.getElementById("inputForm").addEventListener("submit", function() {
-    let button = document.getElementById("submitButton");
-    let text = document.getElementById("buttonText");
-    let spinner = document.getElementById("loadingSpinner");
+    document.querySelector(".register-form").addEventListener("submit", function(event) {
+        let button = document.getElementById("submitButton");
+        let text = document.getElementById("buttonText");
+        let spinner_text = document.getElementById("loadingSpinnerText");
+        let spinner = document.getElementById("loadingSpinner");
 
-    // ボタンを無効化 & スピナーを表示
-    button.disabled = true;
-    text.classList.add("d-none"); // "Save" を非表示
-    spinner.classList.remove("d-none"); // スピナーを表示
-  });
+        // ボタンを無効化 & スピナーを表示
+        button.disabled = true;
+        text.classList.add("d-none"); // "保存" を非表示
+        spinner_text.classList.remove("d-none"); // スピナーのテキストを表示
+        spinner.classList.remove("d-none"); // スピナーを表示
+
+        // すべての入力フォームをリードオンリーに設定
+        let inputs = document.querySelectorAll(".register-form input, .register-form select, .register-form textarea");
+        inputs.forEach(function(input) {
+            input.readOnly = true;
+        });
+    });
 </script>
 
 {% endblock %}
