--- a/templates/twoxstockfinderapp/login.html
+++ b/templates/twoxstockfinderapp/login.html
@@ -1,18 +1,29 @@
 {% extends "twoxstockfinderapp/base.html" %}
+{% load widget_tweaks %}
 
 {% block content %}
 <!-- 認証失敗時の警告文 -->
 {% if form.errors %}
-<p>ログイン認証に失敗しました。</p>
+<div class="alert alert-danger text-center" role="alert">
+    ログイン認証に失敗しました。
+</div>
 {% endif %}
 
-<div class="container" style="margin-top: 30px;">
-  <form method="POST">{% csrf_token %}
-    {{ form.username }}
-    {{ form.password }}
-    <div style="margin-top: 20px;">
-      <button type="submit" value="login" class="btn btn-primary">login</button>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form method="POST">{% csrf_token %}
+                <div class="mb-3">
+                    {{ form.username|add_class:"form-control" }}
+                </div>
+                <div class="mb-3">
+                    {{ form.password|add_class:"form-control" }}
+                </div>
+                <div class="text-center">
+                    <button type="submit" value="login" class="btn btn-primary">ログイン</button>
+                </div>
+            </form>
+        </div>
     </div>
-  </form>
 </div>
 {% endblock %}
