--- a/templates/twoxstockfinderapp/result.html
+++ b/templates/twoxstockfinderapp/result.html
@@ -1,15 +1,21 @@
 {% extends 'twoxstockfinderapp/base.html' %}
 
 {% block content %}
-<div class="container" style="margin-top: 20px;">
-    <h2 style="font-size:30px;">3年以内に株価{% if result == 0 %}は2倍にならなさそうです。。{% else %}が2倍になりそうです！{% endif %}</h2>
+<div class="container mt-5">
+    <h2 class="text-center" style="font-size:30px;">
+        3年以内に株価{% if result == 0 %}は2倍にならなさそうです。。{% else %}が2倍になりそうです！{% endif %}
+    </h2>
 
-    <p>信頼度は{{proba}}%です。</p>
+    <p class="text-center">信頼度は{{ proba }}%です。</p>
 
-    <p>会社名:{{company_name}}</p>
-    <p>証券コード:{{code}}</p>
-    <p>決算年度:{{year}}</p>
+    <div class="mt-4">
+        <p><strong>会社名:</strong> {{ company_name }}</p>
+        <p><strong>証券コード:</strong> {{ code }}</p>
+        <p><strong>決算年度:</strong> {{ year }}</p>
+    </div>
 
-    <a href="/history"><button class="btn btn-primary" type="button" name="history">決算リスト一覧</button>
+    <div class="text-center mt-4">
+        <a href="/history" class="btn btn-primary">決算リスト一覧</a>
+    </div>
 </div>
 {% endblock %}
