--- a/templates/twoxstockfinderapp/index.html
+++ b/templates/twoxstockfinderapp/index.html
@@ -3,14 +3,14 @@
 {% block content %}
 
 <div class="container mt-5">
-    <h5 class="text-center">決算データをリストに新規登録するか、過去の決算データを確認するか選んでください</h5>
+    <h5 class="text-center text-primary"><i class="bi bi-list-check"></i> 決算データをリストに新規登録するか、過去の決算データを確認するか選んでください</h5>
 
     <div class="row mt-4 justify-content-center">
         <div class="col-md-6 text-center">
             <!-- 入力フォーム遷移ボタン -->
-            <a href="/input_form" class="btn btn-primary mb-3 d-block">新規決算データをリストに追加する。</a>
+            <a href="/input_form" class="btn btn-success mb-3 d-block"><i class="bi bi-plus-circle"></i> 新規決算データをリストに追加する</a>
             <!-- 決算データリスト一覧遷移ボタン -->
-            <a href="/history" class="btn btn-primary d-block">決算データリストを確認する。</a>
+            <a href="/history" class="btn btn-info d-block"><i class="bi bi-folder2-open"></i> 決算データリストを確認する</a>
         </div>
     </div>
 </div>
