--- a/templates/twoxstockfinderapp/result.html
+++ b/templates/twoxstockfinderapp/result.html
@@ -2,20 +2,20 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="text-center" style="font-size:30px;">
-        3年以内に株価{% if result == 0 %}は2倍にならなさそうです。。{% else %}が2倍になりそうです！{% endif %}
+    <h2 class="text-center text-primary" style="font-size:30px;">
+        3年以内に株価{% if result == 0 %}は2倍にならなさそうです。。 <i class="bi bi-emoji-frown"></i> {% else %}が2倍になりそうです！ <i class="bi bi-emoji-smile"></i> {% endif %}
     </h2>
 
     <p class="text-center">信頼度は{{ proba }}%です。</p>
 
     <div class="mt-4">
-        <p><strong>会社名:</strong> {{ company_name }}</p>
-        <p><strong>証券コード:</strong> {{ code }}</p>
-        <p><strong>決算年度:</strong> {{ year }}</p>
+        <p><strong><i class="bi bi-building"></i> 会社名:</strong> {{ company_name }}</p>
+        <p><strong><i class="bi bi-barcode"></i> 証券コード:</strong> {{ code }}</p>
+        <p><strong><i class="bi bi-calendar"></i> 決算年度:</strong> {{ year }}</p>
     </div>
 
     <div class="text-center mt-4">
-        <a href="/history" class="btn btn-primary">決算リスト一覧</a>
+        <a href="/history" class="btn btn-success"><i class="bi bi-list-ul"></i> 決算リスト一覧</a>
     </div>
 </div>
 {% endblock %}
