--- a/templates/twoxstockfinderapp/login.html
+++ b/templates/twoxstockfinderapp/login.html
@@ -5,7 +5,7 @@
 <!-- 認証失敗時の警告文 -->
 {% if form.errors %}
 <div class="alert alert-danger text-center" role="alert">
-    ログイン認証に失敗しました。
+    <i class="bi bi-exclamation-triangle-fill"></i> ログイン認証に失敗しました。
 </div>
 {% endif %}
 
@@ -14,13 +14,15 @@
         <div class="col-md-6">
             <form method="POST">{% csrf_token %}
                 <div class="mb-3">
+                    <label for="username" class="form-label"><i class="bi bi-person-fill"></i> ユーザー名</label>
                     {{ form.username|add_class:"form-control" }}
                 </div>
                 <div class="mb-3">
+                    <label for="password" class="form-label"><i class="bi bi-lock-fill"></i> パスワード</label>
                     {{ form.password|add_class:"form-control" }}
                 </div>
                 <div class="text-center">
-                    <button type="submit" value="login" class="btn btn-primary">ログイン</button>
+                    <button type="submit" value="login" class="btn btn-primary"><i class="bi bi-box-arrow-in-right"></i> ログイン</button>
                 </div>
             </form>
         </div>
