--- a/templates/twoxstockfinderapp/index.html
+++ b/templates/twoxstockfinderapp/index.html
@@ -13,6 +13,13 @@
             <a href="/history" class="btn btn-info d-block"><i class="bi bi-folder2-open"></i> 決算データリストを確認する</a>
         </div>
     </div>
+    
+    <div class="row mt-4 justify-content-center">
+        <div class="col-md-8 text-center">
+            <p class="text-muted">過去2014～2023年度の上場企業の決算データを学習しています。</p>
+            <p class="text-muted">3年以内に株価が2倍になりそうな銘柄をAIで予測します。</p>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
